--- a/source/assets/stylesheets/components/_site-footer.scss
+++ b/source/assets/stylesheets/components/_site-footer.scss
@@ -8,7 +8,7 @@ footer {
     background-repeat: no-repeat;
     background-size: cover;
     color: $white;
-    padding: 4em 0;
+    padding: 5em 0;
     position: relative;
     z-index: 0;
 
